# spotify-coffee

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs
