[package]
name = "spotify-coffee"
version = "0.1.0"
edition = "2021"
authors = ["Gilian GONNORD <gilian.gonnord@gmail.com>"]
about = "A command line interface for Spotify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
